--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .idea/
 .vscode/
 bin/*
-cmake-build-debug/
 
 # Prerequisites
 *.d
@@ -55,3 +54,14 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# CMake stuff
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
